[package]
name = "y2025"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
ndarray = { version = "0.17.1", features = ["rayon"] }
ndarray-conv = "0.6.0"
rayon = "1.11"
tracing = "0.1"
winnow = "0.7.14"

[dev-dependencies]
rstest = "0.26.1"
test-log = { version = "0.2.19", features = ["trace"] }
